@@ -41,11 +41,9 @@ Run_Config () {
     WITH_RUN=""
     WITH_PERM=""
     WITH_MYSQL=""
-    WITH_POSTGREHEDER=""
-    WITH_POSTGRELIB=""
     WITH_MEMORYDEBUG=""
     WITH_ENCRYPT=""
-	WITH_THREADING=""
+    WITH_THREADING=""
     
     if [ "$BINDEST" != "" ] ; then
         WITH_BIN=" --with-bindir=$BINDEST"
@@ -63,12 +61,7 @@ Run_Config () {
     if [ "$UMASK" != "" ] ; then
         WITH_PERM=" --with-permissions=$UMASK"
     fi
-#    if [ "$POSTGREHEADER" != "" ] ; then
-#        WITH_POSTGREHEADER=" --with-postgreheader=$POSTGREHEADER"
-#    fi
-#    if [ "$POSTGRELIB" != "" ] ; then
-#        WITH_POSTGRELIB=" --with-postgrelib=$POSTGRELIB"
-#    fi
+
     if [ "$MYSQL" != "yes" ] ; then
     	WITH_MYSQL=" --without-mysql"
     fi
@@ -82,9 +75,9 @@ Run_Config () {
     	WITH_THREADING=" --enable-threading"
     fi
   
-    echo "./configure $WITH_BIN $WITH_DATA $WITH_RUN $WITH_PERM $WITH_MYSQL $WITH_POSTGRELIB $WITH_POSTGREHEADER $WITH_MEMORYDEBUG $WITH_ENCRYPT $WITH_THREADING"
+    echo "./configure $WITH_BIN $WITH_DATA $WITH_RUN $WITH_PERM $WITH_MYSQL $WITH_MEMORYDEBUG $WITH_ENCRYPT $WITH_THREADING"
     
-    ./configure $WITH_BIN $WITH_DATA $WITH_RUN $WITH_PERM $WITH_MYSQL $WITH_POSTGRELIB $WITH_POSTGREHEADER $WITH_MEMORYDEBUG $WITH_ENCRYPT $WITH_THREADING
+    ./configure $WITH_BIN $WITH_DATA $WITH_RUN $WITH_PERM $WITH_MYSQL $WITH_MEMORYDEBUG $WITH_ENCRYPT $WITH_THREADING
     if [ "$REGSCRIPT" = "yes" ] ; then
     	src/bin/register
     fi
@@ -155,8 +148,6 @@ ENCRYPT="no"
 NOCACHE=""
 SHOW_INTRO="yes"
 CAN_QUICK="no"
-#POSTGRELIB="/usr/local/pgsql/lib"
-#POSTGREHEADER="/usr/local/pgsql/include"
 REGSCRIPT="no"
 MYSQL="yes"
 THREAD="no"
@@ -381,57 +372,6 @@ while [ $ok -lt 1 ] ; do
         esac
 done
 echo ""
-
-#ok=0
-#DEF=No
-#echo "Do you want to compile Denora with Postgre SQL support?"
-#while [ $ok -lt 1 ] ; do
-#        echo2 "[$DEF] "
-#        if read INPUT ; then : ; else echo "" ; exit 1 ; fi
-#        if [ ! "$INPUT" ] ; then
-#                INPUT=$DEF
-#        fi
-#        case $INPUT in
-#                n*|N*)
-#			POSTGRE=
-#			POSTGRELIB=
-#			POSTGREHEADER=
-#			ok=1
-#			;;
-#                y*|Y*)
-#			POSTGRE="yes"
-#			ok=0
-#			echo ""
-#			echo "Enter the path to the Postgre Library ie.. libpq.so"
-#			while [ $ok -eq 0 ] ; do
-#				echo2 "[$POSTGRELIB] "
-#				if read INPUT ; then : ; else echo "" ; exit 1 ; fi
-#				if [ ! "$INPUT" ] ; then
-#					INPUT=$POSTGRELIB
-#				fi
-#				ok=1
-#			done
-#			POSTGRELIB=$INPUT
-#			echo ""
-#			ok=0
-#			echo "Enter the path to the Postgre header ie.. libpq-fe.h"
-#			while [ $ok -eq 0 ] ; do
-#				echo2 "[$POSTGREHEADER] "
-#				if read INPUT ; then : ; else echo "" ; exit 1 ; fi
-#				if [ ! "$INPUT" ] ; then
-#					INPUT=$POSTGREHEADER
-#				fi
-#				ok=1
-#			done
-#			POSTGREHEADER=$INPUT			
-#			ok=1
-#			;;
-#                *)
-#                        echo "Please enter 'yes' or 'no'."
-#                        ;;
-#        esac
-#done
-#echo ""
 
 ####
 
