@@ -76,20 +76,6 @@ MYPASQL_BUILD=$(CC) /LD $(MYSQL_INC_PATH) src\mypasql.c /link $(MYSQL_LIB_PATH) 
 LIBS=$(LIBS) libmysql.lib zlib.lib
 !ENDIF
 
-!IF $(USE_POSTGRE) == 1
-!IF $(POSTGRE_LIB) != ""
-LIBS=$(LIBS) /LIBPATH:$(POSTGRE_LIB)
-POSTGRE_LIB_PATH=/LIBPATH:$(POSTGRE_LIB)
-!ENDIF
-!IF $(POSTGRE_INC) != ""
-BASE_CFLAGS=$(BASE_CFLAGS) /I $(POSTGRE_INC)
-POSTGRE_INC_PATH=/I $(POSTGRE_INC)
-!ENDIF
-
-POSTGRE_C=postgre.c
-POSTGRE_O=postgre.obj
-BASE_CFLAGS=/D USE_POSTGRE $(BASE_CFLAGS)
-
 LIBS=$(LIBS) libpq.lib
 !ENDIF
 
