@@ -3,7 +3,7 @@ Denora Version 1.4.0
 Provided by Denora Team <dev@denorastats.org> - 2007
 08/17 A Admins passwords are now hidden in debug messages         [#414]
 08/16 A Added recompile option to Makefile, make recompile        [ #00]
-08/16 A Added new protocol ScaryNet	                              [ #00]
+08/16 A Added new protocol ScaryNet	                          [ #00]
 08/13 A Added XMLRPC documentation                                [#407]
 08/12 A Added option to track only +r users on chanstats          [ #00]
 08/10 A New optional token on connect block for quitprefix        [#404]
@@ -13,6 +13,9 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 02/28 A Added swhois support to nefarious                         [ #00]
 02/28 A Added P10 account support                                 [ #00]
 01/11 A Improved P10 hidden host support                          [ #00]
+08/23 U Updated check_db                                          [ #00]
+08/23 U Removed unneccessary rdb_escape usage                     [ #00]
+08/23 U Updated NOQUIT/QS support not to rely on CAPAB            [ #00]
 08/23 U Updated autoconf stuff                                    [#423]
 08/16 U Updated uid and userlist indexes                          [#395]
 08/16 U Updated p10 to do double check before m_notice            [ #00]
@@ -26,6 +29,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+08/23 F Fixed issue with not registered users on P10              [#416]
 08/19 F Fixed admin table scheme not mysql 4.0 compatible         [ #00]
 08/17 F smiley counting was wrong on x64 boxes                    [#411]
 08/16 F Denora can load one protocol each time                    [ #00]
